--- a/.github/workflows/assign.yml
+++ b/.github/workflows/assign.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: Naturalclar/issue-action@v1.0.0
         with:
           keywords: '["test"]'
-          assignees: '["username"]'
+          assignees: '["urapadmin"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
