--- a/.github/workflows/assign.yml
+++ b/.github/workflows/assign.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: Naturalclar/issue-action@v1.0.0
         with:
-          keywords: '["test"]'
-          assignees: '[$GITHUB_ACTOR]'
+          keywords: '[" "]'
+          assignees: '["urapadmin"]'
           github-token: "${{ secrets.GITHUB_TOKEN }}"
