--- a/.github/workflows/addauthor.yml
+++ b/.github/workflows/addauthor.yml
@@ -1,2 +1,14 @@
-- name: Actions Ecosystem Action Add Assignees
-  uses: actions-ecosystem/action-add-assignees@v1.0.0
+name: Auto Assign
+
+on:
+  issues:
+    types: [opened]
+
+jobs:
+  add_labels:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions-ecosystem/action-add-assignees@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          assignees: ${{ github.actor }}
