--- a/.github/workflows/assign.yml
+++ b/.github/workflows/assign.yml
@@ -1,7 +1,9 @@
 name: "Set Assignee"
-# on:
-#  issues:
-#    types: [opened]
+on:
+  issues:
+    branches-ignore:
+        - '**'
+    types: [opened]
 
 jobs:
   test:
