--- a/.github/workflows/add_assignees.yml
+++ b/.github/workflows/add_assignees.yml
@@ -14,5 +14,5 @@ jobs:
           actions: 'add-assignees'
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
-          assignees: 'urapadmin'
+          assignees: 'urapadmin,${{ github.actor }}'
           random-to: 1
